{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 91,
  "lineage": "8eddaeb9-f472-f8c3-b637-2750d489cd23",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06cff3719c51d4cef",
            "arn": "arn:aws:ec2:us-east-1:628758188797:elastic-ip/eipalloc-06cff3719c51d4cef",
            "association_id": "eipassoc-0913ce0bf9ce3ea4a",
            "domain": "vpc",
            "id": "eipalloc-06cff3719c51d4cef",
            "instance": "i-031f11c901aee2ba4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0df514fc1757298d9",
            "private_dns": "ip-10-0-1-135.ec2.internal",
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-54-160-158-200.compute-1.amazonaws.com",
            "public_ip": "54.160.158.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a0d1e16fc3f61ea",
            "arn": "arn:aws:ec2:us-east-1:628758188797:instance/i-031f11c901aee2ba4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031f11c901aee2ba4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df514fc1757298d9",
            "private_dns": "ip-10-0-1-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-049ccc17270daf0c2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033d46f445b5ec796",
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06423b0590199694b"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628758188797:internet-gateway/igw-0f57772699d1ecb8a",
            "id": "igw-0f57772699d1ecb8a",
            "owner_id": "628758188797",
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            },
            "vpc_id": "vpc-0d88db26bb1851f24"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628758188797:route-table/rtb-0f874cfd79208e948",
            "id": "rtb-0f874cfd79208e948",
            "owner_id": "628758188797",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d88db26bb1851f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628758188797:route-table/rtb-0da0236b43f96e70d",
            "id": "rtb-0da0236b43f96e70d",
            "owner_id": "628758188797",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f57772699d1ecb8a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d88db26bb1851f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eaeba299f2319e7",
            "route_table_id": "rtb-0f874cfd79208e948",
            "subnet_id": "subnet-056960603ef594b3c"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098639bbdca39711d",
            "route_table_id": "rtb-0f874cfd79208e948",
            "subnet_id": "subnet-0845c3061bd4eed85"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7195da00754e2de",
            "route_table_id": "rtb-0da0236b43f96e70d",
            "subnet_id": "subnet-033d46f445b5ec796"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628758188797:security-group/sg-06423b0590199694b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06423b0590199694b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "66.108.184.17/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "4InARowGameApp_ec2_sg",
            "name_prefix": "",
            "owner_id": "628758188797",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d88db26bb1851f24"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628758188797:security-group/sg-05668172dfd8dba3c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05668172dfd8dba3c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Postgres traffic from only ec2 sg",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06423b0590199694b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "4InARowGameApp_rds_sg",
            "name_prefix": "",
            "owner_id": "628758188797",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d88db26bb1851f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628758188797:security-group/sg-0fe4e82191a3ec44c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fe4e82191a3ec44c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Redis traffic from only ec2 sg",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06423b0590199694b"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "4InARowGameApp_redis_sg",
            "name_prefix": "",
            "owner_id": "628758188797",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d88db26bb1851f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628758188797:subnet/subnet-056960603ef594b3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056960603ef594b3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "628758188797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            },
            "vpc_id": "vpc-0d88db26bb1851f24"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628758188797:subnet/subnet-0845c3061bd4eed85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0845c3061bd4eed85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "628758188797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            },
            "vpc_id": "vpc-0d88db26bb1851f24"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628758188797:subnet/subnet-033d46f445b5ec796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033d46f445b5ec796",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "628758188797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            },
            "vpc_id": "vpc-0d88db26bb1851f24"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628758188797:vpc/vpc-0d88db26bb1851f24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce8129e0d4d7b1ac",
            "default_route_table_id": "rtb-0a198cdf52dde1615",
            "default_security_group_id": "sg-04dd1662d367abd3a",
            "dhcp_options_id": "dopt-0de631c26610a57d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d88db26bb1851f24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a198cdf52dde1615",
            "owner_id": "628758188797",
            "tags": {
              "Name": "4InARowGameApp"
            },
            "tags_all": {
              "Name": "4InARowGameApp"
            }
          }
        }
      ]
    }
  ]
}